@@ -5,7 +5,7 @@
 \title{Returns a histogram of the number of reads in each section of a moving
 window of #' variable size across genes.}
 \usage{
-metaGene_nL(features, reads, n_windows = 1000, debug = FALSE, ...)
+metaGene_nL(features, reads, n_windows = 1000, ...)
 }
 \arguments{
 \item{features}{A GRanges object representing a set of genomic coordinates.}
@@ -13,9 +13,6 @@ metaGene_nL(features, reads, n_windows = 1000, debug = FALSE, ...)
 \item{reads}{A GRanges object representing a set of mapped reads.}
 
 \item{n_windows}{The number of windows to break genes into.}
-
-\item{debug}{If set to TRUE, provides additional print options.
-Default: FALSE}
 
 \item{...}{Extra argument passed to mclapply}
 }
